Estruturação do projeto em HTML, CSS e JavaScript

--- a/index.html
+++ b/index.html
@@ -2,16 +2,128 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vídeos</title>
-  <link rel="stylesheet" href="/styles/bootstrap/bootstrap-grid.css">
-  <link rel="stylesheet" href="/styles/style.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="theme-color" content="#222222">
+    <meta name="msapplication-navbutton-color" content="#222222">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#222222">
+    <meta name="format-detection" content="telephone=no">
+    <meta>
+
+    <title>Teste Seox</title>
+
+    <link rel="stylesheet" href="./styles/bootstrap/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="./styles/style.min.css">
 </head>
 
 <body>
+    <div class="wrapper-videos">
+        <div class="container px-4 p-xl-0">
+            <header>
+                <h1 class="">VÍDEOS</h1>
+                <div class="btns-right">
+                    <button title="VEJA MAIS">VEJA MAIS <i class="ico arrow-right"></i></button>
+                    <div class="nav-carrossel">
+                        <button class="slider-button-up" disabled title="Anterior"><i class="ico arrow-up"></i></button>
+                        <button class="slider-button-down" title="Próximo"><i class="ico arrow-down"></i></button>
+                    </div>
+                </div>
 
+            </header>
+        </div>
+
+
+        <main>
+            <div class="container px-4 p-xl-0">
+                <div class="row">
+                    <div class="col-md-7 col-lg-8 col-xl-9">
+                        <div class="card-video card-video--large">
+                            <a class="thumb" href="#" rel="noopener noreferrer" title="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                <img src="./img-exemplo.png" alt="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                <i class="ico play"></i>
+                                <div class="box-comments"><i class="ico comments"></i>11</div>
+                            </a>
+
+                            <div class="infos">
+                                <a href="#" rel="noopener noreferrer" title="Lorem ipsum" class="size-hat cat">Lorem ipsum</a>
+                                <a rel="noopener noreferrer" href="#" title="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                    <h2>Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id</h2>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-5 col-lg-4 col-xl-3">
+                        <div class="carrossel-videos">
+                            <div class="wrapper-itens">
+                                <div class="item-carrossel">
+                                    <div class="card-video ">
+                                        <a class="thumb" href="/teste" rel="noopener noreferrer" title="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                            <img src="./img-exemplo.png" alt="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                            <i class="ico play"></i>
+                                            <div class="box-comments"><i class="ico comments"></i>11</div>
+                                        </a>
+
+                                        <div class="infos">
+                                            <a href="#" rel="noopener noreferrer" title="Lorem ipsum" class="size-hat cat">Lorem ipsum</a>
+                                            <a rel="noopener noreferrer" href="#" title="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                                <h2>Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id</h2>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="item-carrossel">
+                                    <div class="card-video ">
+                                        <a class="thumb" href="#" rel="noopener noreferrer" title="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                            <img src="./img-exemplo.png" alt="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                            <i class="ico play"></i>
+                                            <div class="box-comments"><i class="ico comments"></i>11</div>
+                                        </a>
+
+                                        <div class="infos">
+                                            <a href="#" rel="noopener noreferrer" title="Lorem ipsum" class="size-hat cat">Lorem ipsum</a>
+                                            <a rel="noopener noreferrer" href="#" title="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                                <h2>Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id</h2>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="item-carrossel">
+                                    <div class="card-video ">
+                                        <a class="thumb" href="#" rel="noopener noreferrer" title="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                            <img src="./img-exemplo.png" alt="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                            <i class="ico play"></i>
+                                            <div class="box-comments"><i class="ico comments"></i>11</div>
+                                        </a>
+
+                                        <div class="infos">
+                                            <a href="#" rel="noopener noreferrer" title="Lorem ipsum" class="size-hat cat">Lorem ipsum</a>
+                                            <a rel="noopener noreferrer" href="#" title="Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id">
+                                                <h2>Lorem ipsum dolor sit amet consectetur adipiscing elit ut nunc nulla accumsan id</h2>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+
+
+
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </main>
+
+
+        <script src="./scripts/carrossel.js"></script>
 </body>
 
 </html>
